去掉 macOS 打包，新增跨平台 jar 发布